crates/test-files/fixtures/compile_errors/call_call_on_self.fe
contract Foo {
    pub fn __call__() {}

    fn bar(self) {
        self.__call__()
    }
}
